# PPT-Design-Prompt

./: .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  DESIGN.md  README.md  conversion_manifest.json  pyproject.toml
.github/workflows/: ci.yml
catalog/: brands.txt
examples/: README.md
examples/minimal/: brands.txt
ppt-image/airbnb/: DESIGN.md
ppt-image/airtable/: DESIGN.md
ppt-image/apple/: DESIGN.md
ppt-image/bmw/: DESIGN.md
ppt-image/cal/: DESIGN.md
ppt-image/claude/: DESIGN.md
ppt-image/clay/: DESIGN.md
ppt-image/clickhouse/: DESIGN.md
ppt-image/cohere/: DESIGN.md
ppt-image/coinbase/: DESIGN.md
ppt-image/composio/: DESIGN.md
ppt-image/cursor/: DESIGN.md
ppt-image/elevenlabs/: DESIGN.md
ppt-image/expo/: DESIGN.md
ppt-image/ferrari/: DESIGN.md
ppt-image/figma/: DESIGN.md
ppt-image/framer/: DESIGN.md
ppt-image/hashicorp/: DESIGN.md
ppt-image/ibm/: DESIGN.md
ppt-image/intercom/: DESIGN.md
ppt-image/kraken/: DESIGN.md
ppt-image/lamborghini/: DESIGN.md
ppt-image/linear.app/: DESIGN.md
ppt-image/lovable/: DESIGN.md
ppt-image/minimax/: DESIGN.md
ppt-image/mintlify/: DESIGN.md
ppt-image/miro/: DESIGN.md
ppt-image/mistral.ai/: DESIGN.md
ppt-image/mongodb/: DESIGN.md
ppt-image/notion/: DESIGN.md
ppt-image/nvidia/: DESIGN.md
ppt-image/ollama/: DESIGN.md
ppt-image/opencode.ai/: DESIGN.md
ppt-image/pinterest/: DESIGN.md
ppt-image/posthog/: DESIGN.md
ppt-image/raycast/: DESIGN.md
ppt-image/renault/: DESIGN.md
ppt-image/resend/: DESIGN.md
scripts/: generate_ppt_image_designs.py
tests/: test_converter.py
(+24 files in other folders)
